# ai-factory

./: .gitignore  factory.py  main.ipynb  main.py  pyproject.toml
agents/: base_agent.py  openai_chat.py
config/: config.yaml
tests/: conftest.py  test_base_agent.py  test_openai_chat.py
